--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 March 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong><a href="www.behance.net/rautajay13ae43">www.AjayRaut-Graphic designer.Com</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong><a href="https://www.behance.net/rautajay13ae43">www.AjayRaut-Graphic designer.Com</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 77000 58018</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mumbai, Goregaon</span></li>
                 </ul>
@@ -265,7 +265,7 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Ajay Raut</h4>
+              <h4 align="center" >Ajay Raut</h4>
               <p><em>“Good design is like a refrigerator—when it works, no one notices, but when it doesn't, it sure stinks.”</em></p>
               <ul>
                 <li>Goregaon[W.] Mumbai-400 104</li>
@@ -276,14 +276,14 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Secondary & Higher Secondary Education</h4>
+              <h4 align="center" >Secondary & Higher Secondary Education</h4>
               <h5>2018 - 2020</h5>
               <p><em>Durgadevi Saraf Institute of Management Studies <br> Malad West, Mumbai, Maharashtra 400064</em></p>
               <p> Durgadevi Saraf Institute of Management Studies (DSIMS) generally highlight its good faculty, strong placement record, decent infrastructure, and a positive learning environment, with many students satisfied with the overall college experience and opportunities for career growth</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item"> 
-              <h4>Bachelor of Commerce</h4>
+              <h4 align="center" >Bachelor of Commerce</h4>
               <h5>2020 - 2023</h5>
               <p><em>Dr. Ambedkar College of Commerce & Economics <br>Wadala, Mumbai, Maharashtra 400031</em></p>
               <p>The college provides a quality education in commerce and economics, and equips students with the skills and knowledge they need to succeed in their careers. </p>
@@ -294,7 +294,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
+              <h4 align="center" >Graphic design specialist</h4>
               <h5>2023 - Present</h5>
               <p><em>Capes India, Goregaon, Mumbai, Maharashtra 400063 </em></p>
               <ul>
@@ -305,7 +305,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic designer</h4>
+              <h4 align="center" >Graphic designer</h4>
               <h5>2022 - 2023</h5>
               <p><em>Creative Photography Pvt Ltd, Malad, Mumbai, Maharashtra 400 075</em></p>
               <ul>
@@ -351,7 +351,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Perfume Ads 1</h4>
+                  <h4 align="center" >Perfume Ads 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/app-1.jpg" title="Perfume Ads 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -363,7 +363,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 1</h4>
+                  <h4 align="center" >Product 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -375,7 +375,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Jewellery Design 1</h4>
+                  <h4 align="center" >Jewellery Design 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/branding-1.jpg" title="Jewellery Design 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -387,7 +387,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Flyer Design 1</h4>
+                  <h4 align="center" >Flyer Design 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-1.jpg" title="Jewellery Design 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -399,7 +399,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Perfume Ads 2</h4>
+                  <h4 align="center" >Perfume Ads 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/app-2.jpg" title="Perfume Ads 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -411,7 +411,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 2</h4>
+                  <h4 align="center" >Product 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -423,7 +423,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Jewellery Design 2</h4>
+                  <h4 align="center" >Jewellery Design 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/branding-2.jpg" title="Jewellery Design 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -435,7 +435,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Flyer Design 2</h4>
+                  <h4 align="center" >Flyer Design 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-2.jpg" title="Jewellery Design 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -447,7 +447,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Perfume Ads 3</h4>
+                  <h4 align="center" >Perfume Ads 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/app-3.jpg" title="Perfume Ads 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -459,7 +459,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 3</h4>
+                  <h4 align="center" >Product 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -471,7 +471,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Jewellery Design 3</h4>
+                  <h4 align="center" >Jewellery Design 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/branding-3.jpg" title="Jewellery Design 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -483,7 +483,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Flyer Design 3</h4>
+                  <h4 align="center" >Flyer Design 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-3.jpg" title="Jewellery Design 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
