--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4 align="center" >Ajay Raut</h4>
+              <h4>Ajay Raut</h4>
               <p><em>“Good design is like a refrigerator—when it works, no one notices, but when it doesn't, it sure stinks.”</em></p>
               <ul>
                 <li>Goregaon[W.] Mumbai-400 104</li>
@@ -276,14 +276,14 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4 align="center" >Secondary & Higher Secondary Education</h4>
+              <h4>Secondary & Higher Secondary Education</h4>
               <h5>2018 - 2020</h5>
               <p><em>Durgadevi Saraf Institute of Management Studies <br> Malad West, Mumbai, Maharashtra 400064</em></p>
               <p> Durgadevi Saraf Institute of Management Studies (DSIMS) generally highlight its good faculty, strong placement record, decent infrastructure, and a positive learning environment, with many students satisfied with the overall college experience and opportunities for career growth</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item"> 
-              <h4 align="center" >Bachelor of Commerce</h4>
+              <h4>Bachelor of Commerce</h4>
               <h5>2020 - 2023</h5>
               <p><em>Dr. Ambedkar College of Commerce & Economics <br>Wadala, Mumbai, Maharashtra 400031</em></p>
               <p>The college provides a quality education in commerce and economics, and equips students with the skills and knowledge they need to succeed in their careers. </p>
@@ -294,7 +294,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4 align="center" >Graphic design specialist</h4>
+              <h4>Graphic design specialist</h4>
               <h5>2023 - Present</h5>
               <p><em>Capes India, Goregaon, Mumbai, Maharashtra 400063 </em></p>
               <ul>
@@ -305,7 +305,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4 align="center" >Graphic designer</h4>
+              <h4>Graphic designer</h4>
               <h5>2022 - 2023</h5>
               <p><em>Creative Photography Pvt Ltd, Malad, Mumbai, Maharashtra 400 075</em></p>
               <ul>
