--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -153,7 +153,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+         <!-- <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
@@ -173,7 +173,7 @@
 
         </div>
 
-      </div>
+      </div>-->
 
     </section><!-- /Portfolio Details Section -->
 
