--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter="*" class="filter-active">All</li><br>
             <li data-filter=".filter-app">Perfume Ads</li>
             <li data-filter=".filter-product">Real Estate Design</li>
             <li data-filter=".filter-branding">Jewellery Design</li>
