--- a/index.html
+++ b/index.html
@@ -340,6 +340,17 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Mores">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/more-1.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4 align="center" >New year Poster</h4>
+                  
+                  <a href="assets/img/portfolio/more-1.jpg" title="New year Poster" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
