--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
-     <!-- <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>AJAY RAUT</h2>
         <p><span class="typed" data-typed-items="Graphic Designer">Graphic Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-      </div>-->
+      </div>
 
     </section><!-- /Hero Section -->
 
